WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302153
REGRESSION (iOS 26): Edit menu isn’t shown when tapping inside a text field with looping animation
https://bugs.webkit.org/show_bug.cgi?id=302153
Summary
REGRESSION (iOS 26): Edit menu isn’t shown when tapping inside a text field w...
Alex
Reported
2025-11-07 05:04:09 PST
I have an input with a wrapping container which has a useless animation that does not do anything: @keyframes test { to { content: "" } } I use it to listen to "animationcancel" event so I can tell when the element disappears from DOM. After updating to iOS26 the popover to "paste" text into the input is broken, it immediately disappears every animation cycle apparently. Here's a minimal reproduction on Codepen with all the relevant style rules:
https://codepen.io/waterplea/pen/QwyRbNo
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2025-11-07 17:13:14 PST
Thank you for the report! I can reproduce.
Radar WebKit Bug Importer
Comment 2
2025-11-07 17:13:20 PST
<
rdar://problem/164290305
>
Wenson Hsieh
Comment 3
2025-11-09 17:25:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53648
EWS
Comment 4
2025-11-10 07:34:40 PST
Committed
302794@main
(db75ea4ed5c1): <
https://commits.webkit.org/302794@main
> Reviewed commits have been landed. Closing PR #53648 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug